codegen/tests/ui/struct/no_metadata.stderr
error: no metadata assign
 --> tests/ui/struct/no_metadata.rs:9:1
  |
9 | #[feign]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `feign` (in Nightly builds, run with -Z macro-backtrace for more info)
